Updated faq page

--- a/assets/templates/faqs.html
+++ b/assets/templates/faqs.html
@@ -13,7 +13,7 @@
         </li>
         <li>
             <h3>When are instructors available to answer questions?</h3>
-            <p>Travis is available Monday through Thursday nights from 7 - 9 pm. Dan, Scott, and Tim are available during business hours via slack (Current Full Immersion students take priority)</p>
+            <p>Dan, Scott, and Tim are available during business hours via slack. Don't hesitate to ask questions at any time, the response just might take longer if outside of normal business hours</p>
         </li>
         <li>
             <h3>When can I expect feedback on my assignment?</h3>
